--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -1,17 +1,12 @@
-body{background-color: #2c2c2c;
+body{background-color: #fff;
 font-family: "Open Sans", serif;
 font-size: 100%;
-color: #8d5406;
+color: black;
 
 }
-body h1{color: #8d5406;}
-aside{float: left;
-    background-color: #181818;
-    width: 20%;
-    padding: 2.5%;
-    height: 100vh;
-    color: #fff;
-    border-right: 5 px solid #4d4d4d; 
+body h1{color: black;}
+aside{ background-color: #333;
+    overflow: hidden;
 }
 aside img{width: 80px;
     float: left;
@@ -58,5 +53,14 @@ main .features h1{font-size: 50px;}
 form {margin-left: 32%;
 width: 500px;
 margin-top: 50px;
-
+}
+#homebtn{
+    color:#fff;
+    font-size: 120%;
+    margin-left: 7%;
+    word-spacing: 20%;
+}
+.features h1{
+    text-align: center;
+    color:black;
 }
