--- a/menu/templates/menu/cold_rolls.html
+++ b/menu/templates/menu/cold_rolls.html
@@ -6,6 +6,10 @@
     {%for el in menus%}
         {% if 'Холодные роллы' in el.category %}    
             <h3>{{el.title}}</h3>
+            <h3>{{el.price}}</h3>
+            <h3>{{el.description}}</h3>
+            <h3>{{el.compound}}</h3>
+            
         {% endif %}
     {%endfor%}
     
