--- a/menu/templates/menu/drinks.html
+++ b/menu/templates/menu/drinks.html
@@ -6,6 +6,9 @@
     {%for el in menus%}
         {% if 'Напитки' in el.category %}    
             <h3>{{el.title}}</h3>
+            <h3>{{el.price}}</h3>
+            <h3>{{el.description}}</h3>
+            <h3>{{el.compound}}</h3>
         {% endif %}
     {%endfor%}
     
